Select capture device format with max frame rate

As documented for QCameraFormat.

Fixes: QTBUG-123451
Change-Id: I251672b66118dcfa7b3fe6d338299ae3a4f2d2c9
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
Reviewed-by: Doris Verria <doris.verria@qt.io>
(cherry picked from commit b8047fbd788ce09afe4f5fef079099488c9ed42d)
Reviewed-by: Lars Sutterud <lars.sutterud@qt.io>
(cherry picked from commit 861fb5c38bfea625460881295dd3c53639834304)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>